# style_checker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make.sh  test.hpp
